<resources>
    <string name="app_name">Horizon</string>
    <string name="app_subtitle">Uncluttered Project Collaboration Tool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_groups">Groups</string>


    <string name="menu_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">E-mail</string>
    <string name="sign_up_ask">Create Account</string>
    <string name="sign_up">Sign up</string>

    <string name="create_board_name">Board Name</string>
    <string name="create_board_description">Description</string>
    <string name="create_board_button">Confirm</string>

    <string name="create_group_name">Group Name</string>
    <string name="create_group_description">Description</string>
    <string name="create_group_button">Confirm</string>
    <string name="members"> Members</string>
    <string name="invite">Invite Members</string>

    <string name="menu_search">Search</string>
    <string name="search_user_hint">Search for users</string>

    <string-array name="difficultyLv">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string name="profile_picture_content_desc">Your profile picture</string>
    <string name="profile_picture_username_label">Username</string>
    <string name="profile_picture_email_label">E-mail</string>
    <string name="profile_picture_name_label">Name</string>
    <string name="profile_picture_about_me_label">About me</string>
    <string name="profile_toolbar_title_settings">Profile settings</string>
    <string name="profile_toolbar_save">Save changes</string>
    <string name="profile_toolbar_close">Close profile</string>

    <string name="menu_chats">Private Chats</string>
    <string name="send">SEND</string>
    <string name="default_pfp_path">defaults/default_pfp.png</string>
    <string name="default_bp_path">defaults/default_bp.png</string>
    <string name="profile_toolbar_discard">Discard changes</string>

    <string name="settings_account_toolbar_title">Account settings</string>
    <string name="settings_account_nav_icon_content_desc">Back</string>

    <string name="account_settings_current_email_label">Current e-mail</string>
    <string name="account_settings_new_email_label">Enter new e-mail</string>
    <string name="account_settings_password_label">Enter current password</string>
    <string name="profile_toolbar_cancel">Cancel</string>
    <string name="account_settings_current_password_label">Enter current password</string>
    <string name="account_settings_new_password_label">Enter new password</string>
    <string name="account_settings_reenter_new_password_label">Re-enter new password</string>
    <string name="account_settings_password_change_note">Note: you will get logged out of the app upon a successful password change</string>
    <string name="account_settings_delete_note">Note: your account will be deleted forever! You cannot reverse this action!</string>
    <string name="account_settings_enter_current_email_label">Enter current e-mail</string>
    <string name="account_settings_toolbar_confirm">Confirm</string>
    <string name="account_settings_enter_confirm_label">Type CONFIRM to confirm your account deletion</string>

    <string name="menu_invitations">Group Invitations</string>
    <string name="sunrise_content_desc">Vancouver Sunrise</string>
    <string name="menu_group_chats">Group Chats</string>

</resources>