<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_person_search_24"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_baseline_business_24"
            android:title="@string/menu_groups" />

        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_baseline_business_24"
            android:title="@string/menu_chats" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />

    </group>
</menu>