<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cmpt362project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.cmpt362project.ui.search.SearchUserFragment"
        android:label="Search for users"
        tools:layout="@layout/fragment_search_user" />


    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.cmpt362project.ui.groups.GroupsFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.example.cmpt362project.ui.chat.ChatListFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_chats"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.cmpt362project.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>