<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginPageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:navigationIcon="@drawable/toolbar_settings_dialog_close"
        app:title="Log into your account"
        app:navigationContentDescription="@string/profile_toolbar_cancel" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="12dp" />

    <!-- E-mail -->
    <TextView
        android:text="@string/email"
        style="@style/fields_layout_label_style"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        style="@style/fields_layout_TIL_style"
        app:endIconMode="custom"
        app:errorEnabled="true"
        android:layout_marginBottom="12dp">
        <com.google.android.material.textfield.TextInputEditText
            style="@style/fields_layout_TIET_style"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- E-mail -->

    <!-- Password -->
    <TextView
        android:text="@string/password"
        style="@style/fields_layout_label_style"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        style="@style/fields_layout_TIL_style"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            style="@style/fields_layout_TIET_style"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Password -->

    <Button
        android:layout_marginTop="12dp"
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        style="@style/start_page_button"
        android:text="@string/login"
        app:icon="@drawable/ic_baseline_login_24" />

</LinearLayout>