<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Board"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_board_name" />

    <EditText
        android:id="@+id/create_board_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_board_description" />

    <EditText
        android:id="@+id/create_board_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <Spinner
        android:id="@+id/chosen_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"/>

    <Button
        android:id="@+id/create_board_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_board_button"
        />

</LinearLayout>