<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartPageActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="690dp"
        android:paddingEnd="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/sunrise"
        android:contentDescription="@string/sunrise_content_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80000000"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/nunito_label_on_image_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80000000"
            android:text="@string/app_subtitle"
            android:textAlignment="center"
            android:textAppearance="@style/nunito_label_on_image_subtitle" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_baseline_person_add_24"
            app:iconSize="40dp"
            app:iconGravity="textStart"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_baseline_login_24"
            app:iconSize="40dp"
            app:iconGravity="textStart"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0"
            android:layout_marginBottom="60dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_weight="1"
                android:layout_margin="24dp"
                android:paddingTop = "16dp"
                android:paddingBottom ="16dp"
                android:id="@+id/sign_up_redirect_btn"/>

            <Button
                android:id="@+id/login_redirect_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/login" />


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>