<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_account_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:navigationIcon="@drawable/toolbar_settings_dialog_close"
        app:title="Delete your account"
        app:navigationContentDescription="@string/profile_toolbar_cancel"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="12dp"
        />

    <!-- Enter current e-mail -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_settings_enter_current_email_label"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="4dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_current_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:endIconMode="custom"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Enter current e-mail -->

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="12dp"
        />

    <!-- Enter current password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_settings_current_password_label"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_current_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="8dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Enter current password -->

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="12dp"
        />

    <!-- Enter confirm -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_settings_enter_confirm_label"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="4dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_confirm_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:endIconMode="custom"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="8dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Enter confirm -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_settings_delete_note"
        android:textColor="@color/error"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        />

</LinearLayout>